--- a/package.json
+++ b/package.json
@@ -18,27 +18,27 @@
     "@angular/core": "^8.2.14",
     "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "^8.2.14",
-    "@angular/http": "^7.2.15",
+    "@angular/http": "^7.2.16",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
-    "core-js": "^3.4.1",
+    "core-js": "^3.6.4",
     "hammerjs": "^2.0.8",
-    "rxjs": "^6.5.3",
-    "rxjs-compat": "^6.5.3",
+    "rxjs": "^6.5.4",
+    "rxjs-compat": "^6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.19",
-    "@angular/cli": "~8.3.19",
+    "@angular-devkit/build-angular": "^0.803.25",
+    "@angular/cli": "^8.3.25",
     "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^7.1.4",
-    "@types/jasmine": "^3.4.6",
+    "@angular/language-service": "^7.2.16",
+    "@types/jasmine": "^3.5.3",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.8",
-    "codelyzer": "^5.2.0",
+    "@types/node": "^12.12.26",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^4.4.1",
@@ -46,12 +46,12 @@
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "^5.4.2",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "protractor": "^5.4.3",
     "rxjs-tslint": "^0.1.7",
     "ts-node": "~7.0.0",
     "tslint": "^5.20.1",
-    "typescript": "^3.5.3",
-    "webpack": "^4.41.2"
+    "typescript": "^3.7.5",
+    "webpack": "^4.41.5"
   }
 }
