--- a/package.json
+++ b/package.json
@@ -19,19 +19,18 @@
     "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "^9.0.0",
     "@angular/http": "^7.2.16",
-    "@angular/material": "^8.2.3",
+    "@angular/material": "^9.0.0",
     "@angular/platform-browser": "^9.0.0",
     "@angular/platform-browser-dynamic": "^9.0.0",
     "@angular/router": "^9.0.0",
     "core-js": "^3.6.4",
-    "hammerjs": "^2.0.8",
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.25",
+    "@angular-devkit/build-angular": "~0.900.1",
     "@angular/cli": "^9.0.1",
     "@angular/compiler-cli": "^9.0.0",
     "@angular/language-service": "^9.0.0",
@@ -51,7 +50,7 @@
     "rxjs-tslint": "^0.1.7",
     "ts-node": "~7.0.0",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.5",
+    "typescript": "~3.7.5",
     "webpack": "^4.41.5"
   }
 }
